# AI-PR-Review-Assistant

./: .gitignore  README.md  docker-compose.yml  justfile  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
backend/: .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260529_0001_create_persistence_schema.py  3134f36008b3_add_pr_url_to_review_tasks.py
backend/apr_backend/: __init__.py  main.py
backend/apr_backend/api/: health.py  issue_feedback.py  metrics.py  pr_fetch.py  review_rules.py  review_tasks.py  settings.py
backend/apr_backend/core/: auth.py  config_loader.py  logging_config.py  settings.py
backend/apr_backend/db/: base.py  enums.py  models.py  session.py
backend/apr_backend/services/: ai_validator.py  diff_parser.py  llm_adapter.py  orchestrator.py  rule_engine.py
backend/apr_backend/worker/: entrypoint.py  jobs.py  queue.py
backend/tests/: test_ai_validator.py  test_auth.py  test_diff_parser.py  test_feedback_api.py  test_health.py  test_llm_adapter.py  test_logging_guardrails.py  test_metrics_api.py  test_orchestrator.py  test_persistence_edge_cases.py  test_persistence_schema.py  test_pr_fetch.py  test_report_api.py  test_review_rules_api.py  test_review_task_lifecycle_api.py  test_rule_engine.py  test_settings_api.py  test_smoke.py  test_worker_integration.py  test_worker_startup.py
dispatcher/: .gitignore  config.example.yaml  go.mod  main.go  main_test.go
frontend/: pnpm-lock.yaml
src/: App.tsx  styles.css
(+37 files in other folders)
