[project]
name = "apr-backend"
version = "0.1.0"
description = "Backend API and worker for the AI PR Review Assistant MVP."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "rq>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
apr-api = "apr_backend.main:run"
apr-worker = "apr_backend.worker.entrypoint:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apr_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
